# devlaunch-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/devlaunch/: __init__.py  cli.py  generator.py  models.py
src/devlaunch/templates/fastapi/: .gitignore.j2  Makefile.j2  README.md.j2  docker-compose.yml.j2  pyproject.toml.j2
src/devlaunch/templates/fastapi/.github/workflows/: ci.yml.j2
src/devlaunch/templates/fastapi/app/: main.py.j2
src/devlaunch/templates/fastapi/tests/: test_health.py.j2
tests/: test_cli.py  test_generator.py
