[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlaunch-lite"
version = "1.0.0"
description = "Generate a production-ready FastAPI service with testing, Docker and CI in seconds."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ángel Sierra" }]
keywords = ["developer-experience", "cli", "fastapi", "project-generator", "devex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
devlaunch = "devlaunch.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/devlaunch-lite"
Repository = "https://github.com/YOUR-USERNAME/devlaunch-lite"
Issues = "https://github.com/YOUR-USERNAME/devlaunch-lite/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devlaunch = ["templates/**/*"]

[tool.pytest.ini_options]
addopts = "-q --cov=devlaunch --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["devlaunch"]
